added a switch for the menu when on mobile, moved where the user information is gotten from, added an account page, added switched for the different type of users

--- a/ng-acr/app/partials/haml/login.haml
+++ b/ng-acr/app/partials/haml/login.haml
@@ -8,5 +8,18 @@
     .form-group
       %label(for="pw") Password
       %input#pw.form-control(type="password" ng-model="creds.password" tabindex="2")
+    .form-group
+      .radio-inline
+        %label
+          %input(type="radio" ng-model="creds.role" name="role" value="buyer" tabindex="3")
+          Buyer
+      .radio-inline
+        %label
+          %input(type="radio" ng-model="creds.role" name="role" value="seller" tabindex="3")
+          Seller
+      .radio-inline
+        %label
+          %input(type="radio" ng-model="creds.role" name="role" value="owner" tabindex="3")
+          Owner
     .form-group.text-center
-      %input.btn.btn-success(type="submit" value="Login" tabindex="3")
+      %input.btn.btn-success(type="submit" value="Login" tabindex="4")
