--- a/ng-acr/app/partials/haml/userForm.haml
+++ b/ng-acr/app/partials/haml/userForm.haml
@@ -53,12 +53,18 @@
     %label.sr-only(for="phone") Phone
     %input#phone.form-control(type="tell" ng-model="view.form.model.phone" tabindex="14" placeholder="Phone" size="10")
   %br
-  .checkbox-inline
+  .checkbox-inline(ng-hide="view.form.model.id")
     %label
       %input(type="checkbox" ng-model="view.form.model.accountVerified" tabindex="15") Send welcome Email
-  .checkbox-inline
+  .checkbox-inline(ng-hide="view.form.model.id")
     %label
       %input(type="checkbox" ng-model="view.form.model.phoneVerified" tabindex="16") Phone Verified
+  .form-group
+    .btn.btn-primary(ng-click="view.form.sendWelcomeEmail(view.form.model.id)" ng-if="view.form.model.id")
+      Send Welcome Email
+  .form-group
+    .btn.btn-primary(ng-click="view.form.resetPassword(view.form.model.id)" ng-if="view.form.model.id")
+      Reset Password
   %br
   .form-group.pull-right
     %input.btn.btn-info(type="reset" value="Clear" tabindex="18")
