--- a/ng-acr/app/partials/userForm.html
+++ b/ng-acr/app/partials/userForm.html
@@ -69,15 +69,25 @@
     <input class='form-control' id='phone' ng-model='view.form.model.phone' placeholder='Phone' size='10' tabindex='14' type='tell'>
   </div>
   <br>
-  <div class='checkbox-inline'>
+  <div class='checkbox-inline' ng-hide='view.form.model.id'>
     <label>
       <input ng-model='view.form.model.accountVerified' tabindex='15' type='checkbox'>Send welcome Email</input>
     </label>
   </div>
-  <div class='checkbox-inline'>
+  <div class='checkbox-inline' ng-hide='view.form.model.id'>
     <label>
       <input ng-model='view.form.model.phoneVerified' tabindex='16' type='checkbox'>Phone Verified</input>
     </label>
+  </div>
+  <div class='form-group'>
+    <div class='btn btn-primary' ng-click='view.form.sendWelcomeEmail(view.form.model.id)' ng-if='view.form.model.id'>
+      Send Welcome Email
+    </div>
+  </div>
+  <div class='form-group'>
+    <div class='btn btn-primary' ng-click='view.form.resetPassword(view.form.model.id)' ng-if='view.form.model.id'>
+      Reset Password
+    </div>
   </div>
   <br>
   <div class='form-group pull-right'>
