--- a/ng-acr/app/partials/userForm.html
+++ b/ng-acr/app/partials/userForm.html
@@ -92,6 +92,7 @@
   </div>
   <br>
   <div class='form-group pull-right'>
+    <input class='btn btn-danger' ng-click='view.form.delete()' ng-if='view.form.model.id' tabindex='19' type='reset' value='Delete'>
     <input class='btn btn-info' tabindex='18' type='reset' value='Clear'>
     <input class='btn btn-success' tabindex='17' type='submit' value='Save'>
   </div>
