added a button to verify Phone numbers

--- a/ng-acr/app/partials/account.html
+++ b/ng-acr/app/partials/account.html
@@ -1,2 +1,4 @@
 <h2>Account</h2>
+<input class='btn btn-info' ng-click='view.verifyPhone()' tabindex='1' type='button' value='Verify Phone'>
+<br>
 To Be Continued...
