--- a/ng-acr/app/partials/haml/account.haml
+++ b/ng-acr/app/partials/haml/account.haml
@@ -1,2 +1,4 @@
 %h2 Account
+%input.btn.btn-info(ng-click="view.verifyPhone()" type="button" tabindex="1" value="Verify Phone")
+%br
 To Be Continued...
