--- a/ng-acr/app/partials/tradelines.html
+++ b/ng-acr/app/partials/tradelines.html
@@ -10,7 +10,7 @@
         <option ng-bind='product.niceName' ng-repeat='product in view.productList' ng-value='product.id'></option>
       </select>
     </div>
-    <div class='form-group col-lg-3'>
+    <div class='form-group col-lg-3' ng-if='userInfo.roles.owner'>
       <label class='sr-only' for='total'>Seller (Required)</label>
       <select class='form-control' id='title' ng-model='view.form.model.seller' required tabindex='1'>
         <option value=''>Seller (Required)</option>
@@ -25,8 +25,6 @@
       <label class='sr-only' for='bank'>Cost</label>
       <input class='form-control' id='bank' min='0' ng-model='view.form.model.cost' placeholder='Cost' tabindex='2' type='number'>
     </div>
-  </div>
-  <div class='row'>
     <div class='form-group col-lg-3'>
       <label class='sr-only' for='limit'>Credit Limit</label>
       <input class='form-control' id='limit' min='0' ng-model='view.form.model.creditLimit' placeholder='Credit Limit' tabindex='3' type='number'>
@@ -43,8 +41,6 @@
       <label class='sr-only' for='tier'>Tier</label>
       <input class='form-control' id='tier' min='0' ng-model='view.form.model.tier' placeholder='Tier' tabindex='6' type='number'>
     </div>
-  </div>
-  <div class='row'>
     <div class='form-group col-lg-2'>
       <label class='sr-only' for='mo'>moRating (Required)</label>
       <select class='form-control' id='mo' ng-model='view.form.model.moRating' tabindex='7'>
