--- a/ng-acr/app/partials/login.html
+++ b/ng-acr/app/partials/login.html
@@ -10,8 +10,9 @@
       <label for='pw'>Password</label>
       <input class='form-control' id='pw' ng-model='creds.password' tabindex='2' type='password'>
     </div>
-    <div class='form-group text-center'>
-      <input class='btn btn-success' tabindex='4' type='submit' value='Login'>
+    <div class='form-group'>
+      <a href='/#/passwordReset'>Forgot password?</a>
+      <input class='pull-right btn btn-success' tabindex='4' type='submit' value='Login'>
     </div>
   </form>
 </div>
