--- a/ng-acr/app/partials/passwordSet.html
+++ b/ng-acr/app/partials/passwordSet.html
@@ -1,7 +1,7 @@
 <div class='col-lg-4 col-lg-offset-4 col-xs-12'>
   <h4 class='text-center'>Welcome to Amazing Credit Results</h4>
   <form ng-submit='form.setPassword()'>
-    <div class='alert alert-danger' ng-bind='form.message' ng-show='res.message'></div>
+    <div class='alert alert-danger' ng-bind='form.message' ng-show='form.message'></div>
     <div class='form-group'>
       <label for='pw'>Password</label>
       <input class='form-control' id='pw' ng-model='form.model.password' tabindex='2' type='password'>
