added checkout page with different methods, needs testing

--- a/ng-acr/app/partials/haml/cart.haml
+++ b/ng-acr/app/partials/haml/cart.haml
@@ -18,7 +18,7 @@
         .col-md-5
           %h5.text-right ${{line.nicePrice}}.00
           .btn.btn-danger.pull-right(ng-click="view.removeFromCart(line.id)") Remove From Cart
-  .clearfix
+.row
   %h4.col-md-12 {{view.items.length}} Items in your cart
   %h4.col-md-12 
     %strong Total: 
