--- a/ng-acr/app/partials/cart.html
+++ b/ng-acr/app/partials/cart.html
@@ -27,7 +27,8 @@
       </div>
     </div>
   </div>
-  <div class='clearfix'></div>
+</div>
+<div class='row'>
   <h4 class='col-md-12'>{{view.items.length}} Items in your cart</h4>
   <h4 class='col-md-12'>
     <strong>Total:</strong>
