--- a/ng-acr/app/partials/userTable.html
+++ b/ng-acr/app/partials/userTable.html
@@ -1,16 +1,18 @@
 <table class='table' ng-table='view.tableParams'>
   <thead>
     <tr class='row'>
-      <th class='text-left col-lg-4 hidden-xs'>Name</th>
-      <th class='text-left col-lg-4 hidden-xs'>Email</th>
-      <th class='text-left col-lg-4 hidden-xs'>Phone</th>
+      <th class='text-left hidden-xs'>Name</th>
+      <th class='text-left hidden-xs'>Email</th>
+      <th class='text-left hidden-xs'>Phone</th>
+      <th class='text-left hidden-xs'>Balance</th>
     </tr>
   </thead>
   <tbody class='table-hover'>
     <tr class='row' ng-click='view.form.loadRow(user)' ng-repeat='user in $data'>
-      <td class='col-lg-4 col-xs-12' data-title='Name' ng-bind='user.fullName' sortable='name'></td>
-      <td class='col-lg-4 col-xs-12' data-title='Email' ng-bind='user.email' sortable='email'></td>
-      <td class='col-lg-4 col-xs-12' data-title='Phone' ng-bind='user.phone' sortable='phone'></td>
+      <td data-title='Name' ng-bind='user.fullName' sortable='name'></td>
+      <td data-title='Email' ng-bind='user.email' sortable='email'></td>
+      <td data-title='Phone' ng-bind='user.phone' sortable='phone'></td>
+      <td data-title='Balance' ng-bind='user.balance' sortable='balance'></td>
     </tr>
   </tbody>
 </table>
