added a checkout button, fixed not being able to see total and items on checkout page

--- a/ng-acr/app/partials/checkout.html
+++ b/ng-acr/app/partials/checkout.html
@@ -86,4 +86,7 @@
       </label>
     </div>
   </div>
+  <div class='col-md-12'>
+    <div class='btn btn-primary' ng-click='view.checkout()' ng-disabled='!view.payWith'>Choose payment method</div>
+  </div>
 </div>
