--- a/ng-acr/app/partials/haml/checkout.haml
+++ b/ng-acr/app/partials/haml/checkout.haml
@@ -58,3 +58,5 @@
     .radio
       %label
         %input(type="radio" name="payWith" value="ach" ng-model="view.payWith") Use ACH account
+  .col-md-12
+    .btn.btn-primary(ng-disabled="!view.payWith" ng-click="view.checkout()") Choose payment method
